module/postponed/type_constructor/tests/inc/many/many_from_tuple_test.stderr
error[E0277]: `({integer}, {integer})` is not an iterator
 --> tests/dt/type_constructor/many/many_from_tuple_test.rs:6:3
  |
6 |   Bad::from( ( 1, 2 ) );
  |   ^^^ `({integer}, {integer})` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `({integer}, {integer})`
  = help: the trait `From< Collection >` is implemented for `Bad< T >`
  = note: required for `({integer}, {integer})` to implement `IntoIterator`
note: required for `Bad< _ >` to implement `From<({integer}, {integer})>`
 --> tests/dt/type_constructor/many/many_from_tuple_test.rs:5:3
  |
5 |   types!( many Bad : < T > );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
  = note: this error originates in the macro `$crate::_many` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)
