module/postponed/type_constructor/tests/inc/many/many_from_tuple_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( many Bad : < T > );
  Bad::from( ( 1, 2 ) );
}
